[gd_scene load_steps=6 format=3 uid="uid://t4qconrxwxli"]

[ext_resource type="PackedScene" uid="uid://c5ck3dhekpwb8" path="res://scenes/follow_camera.tscn" id="1_3a7ly"]
[ext_resource type="Script" path="res://scenes/golf_level.gd" id="1_ac6s6"]
[ext_resource type="PackedScene" uid="uid://c5vbxqhevocy7" path="res://scenes/golf_tee.tscn" id="3_6q2yk"]
[ext_resource type="PackedScene" uid="uid://df7t70153a3bb" path="res://scenes/golf_hole.tscn" id="3_kt60g"]
[ext_resource type="PackedScene" uid="uid://dck5lkoxskrel" path="res://scenes/golf_tilemap.tscn" id="5_pwgko"]

[node name="GolfLevel" type="Node2D" node_paths=PackedStringArray("camera", "tee", "hole", "map")]
script = ExtResource("1_ac6s6")
camera = NodePath("FollowCamera")
tee = NodePath("GolfTee")
hole = NodePath("GolfHole")
map = NodePath("TileMap")

[node name="FollowCamera" parent="." instance=ExtResource("1_3a7ly")]

[node name="GolfTee" parent="." instance=ExtResource("3_6q2yk")]
position = Vector2(0, -112)

[node name="GolfHole" parent="." instance=ExtResource("3_kt60g")]
position = Vector2(0, 100)
scale = Vector2(1.3, 1.3)

[node name="TileMap" parent="." instance=ExtResource("5_pwgko")]
layer_0/tile_data = PackedInt32Array(-393219, 2, 0, -458755, 2, 0, -524291, 2, 0, -589827, 2, 0, -589826, 2, 0, -589825, 2, 0, -655360, 2, 0, -655358, 2, 0, -655359, 2, 0, -589822, 2, 0, -524286, 2, 0, -458750, 2, 0, -65536, 2, 0, 0, 2, 0, 65535, 2, 0, -1, 2, 0, 65536, 1, 0, 1, 1, 0, 131071, 1, 268435456, 65534, 1, 268435456, -2, 1, 805306368, -65537, 1, 805306368, -131072, 1, 536870912, -65535, 1, 536870912, -393213, 1, 536870912, -327676, 1, 536870912, -262139, 1, 536870912, -196602, 1, 536870912, -327684, 1, 805306368, -262149, 1, 805306368, -196614, 1, 805306368, -131079, 1, 805306368, 196601, 1, 268435456, 262138, 1, 268435456, 327675, 1, 268435456, 458749, 1, 268435456, 393218, 1, 0, 327683, 1, 0, 262148, 1, 0, 196613, 1, 0, 131078, 1, 0, -131066, 2, 0, -65530, 2, 0, 6, 2, 0, 65542, 2, 0, -65543, 2, 0, -7, 2, 0, 65529, 2, 0, 131065, 2, 0, -327677, 1, 268435456, -262140, 1, 268435456, -196603, 1, 268435456, -393214, 1, 268435456, -327683, 1, 0, -262148, 1, 0, -196613, 1, 0, -131078, 1, 0, 196602, 1, 536870912, 262139, 1, 536870912, 327676, 1, 536870912, 393213, 1, 536870912, 458750, 1, 536870912, 393212, 1, 268435456, 393217, 1, 805306368, 327682, 1, 805306368, 262147, 1, 805306368, 196612, 1, 805306368, 131077, 1, 805306368, 524286, 1, 268435456, 458753, 1, 0, 458752, 2, 0, 524287, 2, 0)
